# spread-option-benchmark

./: .gitignore  README.md  gen_all.py  main.py  pyproject.toml  smoke_test.py
src/spread_benchmark/: __init__.py  adaptive.py  generate.py  payoff.py  pricer.py  quadrature.py  utils.py
src/spread_benchmark/models/: base.py  gbm.py  laplace.py  merton.py  sv.py  vg.py
